[package]
name = "IronLink"
version = "0.1.0"
edition = "2021"
authors = ["hoando."]

[[bin]]
name = "ironlink-cli"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
libp2p = {version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "ping"]  }
futures = "0.3.30"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }